# ros2_mecabot2_sim

./: README.md
src/base/: CMakeLists.txt  package.xml
src/base/config/: controller_config.yaml
src/base/launch/: robot_bringup.launch.py
src/base/robot_desc/: generators.xacro  inertial.xacro  materials.xacro  mecabot2_assemble.xacro  ros2_control.xacro
src/base/rviz2/: view.rviz
src/kinematics/: CMakeLists.txt  package.xml
src/kinematics/include/ros2_mecabot2_sim_kinematics/: kinematics_worker.hpp
src/kinematics/src/: kinematics_worker.cpp
src/perception/: CMakeLists.txt  package.xml
src/perception/include/ros2_mecabot2_sim_perception/: passive_wheel_odometry.hpp
src/perception/src/: passive_wheel_odometry.cpp
