<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_mecabot2_sim_kinematics</name>
  <version>0.1.0</version>
  <description>Robot motion execution package for ros2_mecabot2_sim</description>
  <maintainer email="aftito.faturohim@gmail.com">Aftito Nur Faturohim</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- TODO: Test the dependencies in a container, make sure they cover all needs -->

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
